--- a/SmackApp/SmackApp/Base.lproj/Main.storyboard
+++ b/SmackApp/SmackApp/Base.lproj/Main.storyboard
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,11 +15,14 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="SWRevealViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cqr-NW-0h3"/>
+                        <viewControllerLayoutGuide type="bottom" id="Lw3-9Q-jSr"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <segue destination="U6n-ni-cEz" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="PfQ-A8-oA0"/>
@@ -32,26 +36,92 @@
         <scene sceneID="2go-Fb-TeQ">
             <objects>
                 <viewController id="U6n-ni-cEz" customClass="ChannelVC" customModule="SmackApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="KWV-8g-Dmu">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Apa-Tr-lma"/>
+                        <viewControllerLayoutGuide type="bottom" id="Nrk-zM-Usl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KWV-8g-Dmu" customClass="GradientView" customModule="SmackApp" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NQA-fg-4EQ">
+                                <rect key="frame" x="16" y="44" width="63" height="23"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Channels" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VYi-PG-Adj">
+                                <rect key="frame" x="16" y="87" width="51" height="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CTb-En-Xp2">
+                                <rect key="frame" x="265" y="83" width="22" height="22"/>
+                                <state key="normal" image="addChannelButton"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Wwf-ps-qO5">
+                                <rect key="frame" x="16" y="572" width="75" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="Czu-oH-Mvq"/>
+                                    <constraint firstAttribute="height" constant="75" id="kti-iD-PVb"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pAd-87-aAB">
+                                <rect key="frame" x="0.0" y="125" width="375" height="427"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OkS-Kz-bSp">
+                                <rect key="frame" x="111" y="593" width="46" height="33"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="NFW-fC-bQq"/>
+                        <constraints>
+                            <constraint firstItem="Wwf-ps-qO5" firstAttribute="top" secondItem="pAd-87-aAB" secondAttribute="bottom" constant="20" id="4lA-qW-Fmh"/>
+                            <constraint firstItem="VYi-PG-Adj" firstAttribute="top" secondItem="NQA-fg-4EQ" secondAttribute="bottom" constant="20" id="Blt-ac-RPE"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CTb-En-Xp2" secondAttribute="trailing" constant="72" id="Egv-Uz-1XG"/>
+                            <constraint firstItem="NQA-fg-4EQ" firstAttribute="leading" secondItem="KWV-8g-Dmu" secondAttribute="leadingMargin" id="M3U-kE-RrO"/>
+                            <constraint firstItem="pAd-87-aAB" firstAttribute="leading" secondItem="KWV-8g-Dmu" secondAttribute="leading" id="Sn7-EE-NSG"/>
+                            <constraint firstItem="OkS-Kz-bSp" firstAttribute="leading" secondItem="Wwf-ps-qO5" secondAttribute="trailing" constant="20" id="dWy-8k-GzF"/>
+                            <constraint firstItem="NQA-fg-4EQ" firstAttribute="top" secondItem="Apa-Tr-lma" secondAttribute="bottom" constant="24" id="eO6-Id-Ygt"/>
+                            <constraint firstItem="OkS-Kz-bSp" firstAttribute="centerY" secondItem="Wwf-ps-qO5" secondAttribute="centerY" id="eoU-kk-fuo"/>
+                            <constraint firstItem="pAd-87-aAB" firstAttribute="top" secondItem="CTb-En-Xp2" secondAttribute="bottom" constant="20" id="hel-xh-DF8"/>
+                            <constraint firstAttribute="trailing" secondItem="pAd-87-aAB" secondAttribute="trailing" id="jZn-xm-E9Z"/>
+                            <constraint firstItem="Nrk-zM-Usl" firstAttribute="top" secondItem="Wwf-ps-qO5" secondAttribute="bottom" constant="20" id="nmo-yq-kjV"/>
+                            <constraint firstItem="Wwf-ps-qO5" firstAttribute="leading" secondItem="KWV-8g-Dmu" secondAttribute="leadingMargin" id="qJA-sE-06Y"/>
+                            <constraint firstItem="VYi-PG-Adj" firstAttribute="leading" secondItem="KWV-8g-Dmu" secondAttribute="leadingMargin" id="uOx-Uk-Lug"/>
+                            <constraint firstItem="CTb-En-Xp2" firstAttribute="centerY" secondItem="VYi-PG-Adj" secondAttribute="centerY" id="ysa-Rv-QZn"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="topColor">
+                                <color key="value" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ST5-rU-aT5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1566" y="-322"/>
+            <point key="canvasLocation" x="1565.5999999999999" y="-322.48875562218893"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="Y5l-Pe-1dW">
             <objects>
                 <viewController id="lv8-dP-3VP" customClass="ChatVC" customModule="SmackApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qDA-36-eWD"/>
+                        <viewControllerLayoutGuide type="bottom" id="dCY-7e-weL"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="XTB-Bh-dg9">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XSV-V5-Mv0">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XSV-V5-Mv0" customClass="GradientView" customModule="SmackApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="375" height="77"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YM0-sn-38p">
@@ -81,11 +151,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="XSV-V5-Mv0" firstAttribute="top" secondItem="Mec-Ja-9fy" secondAttribute="top" id="HWc-xX-p2H"/>
-                            <constraint firstItem="XSV-V5-Mv0" firstAttribute="leading" secondItem="Mec-Ja-9fy" secondAttribute="leading" id="Vy0-GS-MTh"/>
-                            <constraint firstItem="XSV-V5-Mv0" firstAttribute="trailing" secondItem="Mec-Ja-9fy" secondAttribute="trailing" id="yAC-JL-WPQ"/>
+                            <constraint firstItem="XSV-V5-Mv0" firstAttribute="top" secondItem="qDA-36-eWD" secondAttribute="bottom" id="HWc-xX-p2H"/>
+                            <constraint firstItem="XSV-V5-Mv0" firstAttribute="leading" secondItem="XTB-Bh-dg9" secondAttribute="leading" id="Vy0-GS-MTh"/>
+                            <constraint firstItem="XSV-V5-Mv0" firstAttribute="trailing" secondItem="XTB-Bh-dg9" secondAttribute="trailing" id="yAC-JL-WPQ"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Mec-Ja-9fy"/>
                     </view>
                     <connections>
                         <outlet property="menuBtn" destination="YM0-sn-38p" id="tdv-uG-fpO"/>
@@ -99,11 +168,14 @@
         <scene sceneID="ts2-sZ-AWT">
             <objects>
                 <viewController id="wcO-Vz-jFR" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bwO-hU-TvB"/>
+                        <viewControllerLayoutGuide type="bottom" id="cgJ-j9-6LY"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="rZw-Lz-BUy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="8vf-gQ-qaO"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uiO-66-fP9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -111,6 +183,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="addChannelButton" width="22" height="22"/>
+        <image name="menuProfileIcon" width="99" height="99"/>
         <image name="smackBurger" width="40" height="40"/>
     </resources>
 </document>
