--- a/SmackApp/SmackApp/Base.lproj/Main.storyboard
+++ b/SmackApp/SmackApp/Base.lproj/Main.storyboard
@@ -431,12 +431,106 @@
                         <outlet property="userImg" destination="beH-S8-Njw" id="Jeu-TA-vLn"/>
                         <outlet property="usernameTxt" destination="k2l-el-ds4" id="gm8-BO-C8r"/>
                         <segue destination="6wa-81-leU" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSeque:" id="n5Z-cp-bsr"/>
+                        <segue destination="BaH-pk-UPL" kind="show" identifier="toAvatarPicker" id="v6M-cf-IGl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pzS-9z-Beg" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="6wa-81-leU" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="3240.8000000000002" y="-322.48875562218893"/>
+        </scene>
+        <!--Avatar PickerVC-->
+        <scene sceneID="upB-Nd-TY1">
+            <objects>
+                <viewController id="BaH-pk-UPL" customClass="AvatarPickerVC" customModule="SmackApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Rjk-lt-KrP"/>
+                        <viewControllerLayoutGuide type="bottom" id="a5F-qw-QEX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ogs-jN-cxN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OM6-sn-hmE">
+                                <rect key="frame" x="16" y="28" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="Cyo-3V-Gsu"/>
+                                    <constraint firstAttribute="height" constant="30" id="rb4-Ty-9jl"/>
+                                </constraints>
+                                <state key="normal" image="smackBack"/>
+                                <connections>
+                                    <action selector="backPressed:" destination="BaH-pk-UPL" eventType="touchUpInside" id="qTf-zZ-6cd"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="lmT-mb-EQc">
+                                <rect key="frame" x="107.5" y="28" width="160" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="fXb-9G-94h"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Dark"/>
+                                    <segment title="Light"/>
+                                </segments>
+                                <color key="tintColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="segmentControlChanged:" destination="BaH-pk-UPL" eventType="valueChanged" id="cRh-Wm-xXI"/>
+                                </connections>
+                            </segmentedControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="s6W-ff-ZsP">
+                                <rect key="frame" x="0.0" y="78" width="375" height="589"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="THQ-3Y-Ger">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="avatarCell" id="TEg-fJ-rey" customClass="AvatarCell" customModule="SmackApp" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="abz-M8-tCW">
+                                                    <rect key="frame" x="10" y="10" width="80" height="80"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="abz-M8-tCW" secondAttribute="bottom" constant="10" id="4Ol-o5-JWW"/>
+                                            <constraint firstItem="abz-M8-tCW" firstAttribute="leading" secondItem="TEg-fJ-rey" secondAttribute="leading" constant="10" id="TrT-Y8-QFf"/>
+                                            <constraint firstItem="abz-M8-tCW" firstAttribute="top" secondItem="TEg-fJ-rey" secondAttribute="top" constant="10" id="ffG-Q2-7yV"/>
+                                            <constraint firstAttribute="trailing" secondItem="abz-M8-tCW" secondAttribute="trailing" constant="10" id="suh-RW-pil"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="avatarImage" destination="abz-M8-tCW" id="Vp9-F8-igZ"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="s6W-ff-ZsP" firstAttribute="top" secondItem="OM6-sn-hmE" secondAttribute="bottom" constant="20" id="34X-I9-wTf"/>
+                            <constraint firstItem="OM6-sn-hmE" firstAttribute="leading" secondItem="ogs-jN-cxN" secondAttribute="leadingMargin" id="L48-u4-cyI"/>
+                            <constraint firstItem="s6W-ff-ZsP" firstAttribute="leading" secondItem="ogs-jN-cxN" secondAttribute="leading" id="OtM-1i-cex"/>
+                            <constraint firstItem="lmT-mb-EQc" firstAttribute="top" secondItem="Rjk-lt-KrP" secondAttribute="bottom" constant="8" id="XQe-AK-O2B"/>
+                            <constraint firstAttribute="trailing" secondItem="s6W-ff-ZsP" secondAttribute="trailing" id="co1-k1-u0i"/>
+                            <constraint firstItem="a5F-qw-QEX" firstAttribute="top" secondItem="s6W-ff-ZsP" secondAttribute="bottom" id="jsK-CW-z6J"/>
+                            <constraint firstItem="lmT-mb-EQc" firstAttribute="centerX" secondItem="ogs-jN-cxN" secondAttribute="centerX" id="krb-cD-Qbf"/>
+                            <constraint firstItem="OM6-sn-hmE" firstAttribute="top" secondItem="Rjk-lt-KrP" secondAttribute="bottom" constant="8" id="lS0-Tg-Ok6"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="s6W-ff-ZsP" id="L4s-hG-rQv"/>
+                        <outlet property="segmentControl" destination="lmT-mb-EQc" id="GgZ-Of-BzO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wjq-t7-WMm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4112.8000000000002" y="-322.48875562218893"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="Y5l-Pe-1dW">
@@ -516,6 +610,7 @@
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
         <image name="profileDefault" width="192" height="192"/>
+        <image name="smackBack" width="28" height="28"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
